# cook

./: Caddyfile  Cargo.toml  Justfile  README.md
agent/: Cargo.toml
agent/src/: lib.rs  local.rs
cli/: Cargo.toml
cli/src/: kdl.rs  main.rs
cli/src/command/: apply.rs  install.rs  mod.rs  plan.rs  preview.rs  run.rs  ssh.rs  up.rs
cook/: AGENTS.md  Cargo.toml
cook/src/: context.rs  global_state.rs  host.rs  kdl.rs  lib.rs
cook/src/file/: api.rs  spec.rs
cook/src/ghrelease/: api.rs
cook/src/package/: api.rs  mod.rs  spec.rs
cook/src/service/: api.rs  mod.rs  spec.rs
cook/src/user/: api.rs  spec.rs
cook/src/which/: api.rs  spec.rs
example/: Cookfile
example/rust/: Cargo.toml
example/rust/data/: Caddyfile
example_kdl/: cook.kdl
example_rust/: Cargo.toml
example_rust/src/: main.rs
kdl/.claude/: settings.local.json
kdl/src/: entry.rs  v1_parser.rs  v2_parser.rs  value.rs
