[workspace]
resolver = "2"
members = ["agent", "cli", "cook"]
exclude = ["kdl", "example/rust"]
default-members = ["cli"]

[workspace.dependencies]
openssh = { version = "0.11", features = ["native-mux"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
cook = { path = "cook", default-features = false, features = ["ssh"] }
kdl = { path = "kdl" }
serde_json = "1.0.123"
serde = { version = "1.0.192", features = ["derive"] }
erased-serde = "0.3"
