[workspace]
resolver = "2"
members = ["agent", "cli", "cook"]
exclude = ["kdl", "example/rust"]
default-members = ["cli"]

[workspace.dependencies]
openssh = { version = "0.11", features = ["native-mux"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
cook = { path = "cook", default-features = false, features = ["ssh"] }
kdl = { path = "kdl" }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
erased-serde = "0.3"
typetag = "0.2"
anyhow = "1.0"
walkdir = "2.5"
