[package]
name = "cook_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cook"
path = "src/main.rs"

[features]

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
cook = { path = "../cook" }
kdl = { path = "../kdl" }
openssh = { version = "0.11", features = ["native-mux"] }
tokio = { version = "1.34.0", features = ["full"] }
