[package]
name = "cook_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cook"
path = "src/main.rs"

[features]

[dependencies]
clap.workspace = true
cook.workspace = true
kdl.workspace = true
openssh.workspace = true
tokio = { version = "1.34.0", features = ["full"] }
indexmap = "2"
colored = "3"
serde_json.workspace = true
serde.workspace = true
erased-serde.workspace = true
